[package]
name = "netrat"
version = "0.1.0"
edition = "2021"
default-run = "netrat"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "netrat"
path = "src/main.rs"

[[bin]]
name = "echo-server"
path = "src/bin/echo_server.rs"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
